# exported-PID-control

./: .gitignore  CMakeLists.txt  auto-test.sh  codedescriptor.dmr
.cursor/rules/: no-pointless-comment.mdc  simulink-saftey.mdc
controller_cmake_codegen/: buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  controller_codegenTest.cpp  controller_codegenTest.h  controller_codegenTest_data.cpp  ert_main.cpp  rtwtypes.h  rtwtypeschksum.mat
controller_cmake_codegen/tmwinternal/: simulink_cache.xml  tr
controller_codegenTest_ert_rtw/: codedescriptor.dmr  controller_codegenTest.bat  controller_codegenTest.cpp  controller_codegenTest.h  controller_codegenTest.mk  controller_codegenTest.rsp  controller_codegenTest_comp.rsp  rtwtypeschksum.mat
controller_codegenTest_ert_rtw/tmwinternal/: tr
controller_codegenTest_ert_rtwV1/: buildInfo.mat  codeInfo.mat  compileInfo.mat  controller_codegenTest_data.cpp  ert_main.cpp  rtwtypes.h
controller_codegenTest_ert_rtwV1/tmwinternal/: simulink_cache.xml
controller_its_optimal_codegen/: .CMakeLists.txt.swo  CMakeLists.txt  buildInfo.mat  codeInfo.mat  compileInfo.mat  controller_codegenTest.h  ert_main.cpp  rtwtypes.h  rtwtypeschksum.mat
controller_its_optimal_codegen/test/: CMakeLists.txt
controller_its_optimal_codegen/tmwinternal/: simulink_cache.xml  tr
script/: build.sh  test.sh
src/: CMakeLists.txt  PID_Controller.cpp  PID_Controller.h  PID_Controller_data.cpp  PID_Controller_private.h  PID_Controller_types.h  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  controller_codegenTest.cpp  ert_main.cpp  ros2ModelInfo.mat  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtmodel.h  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat
src/tmwinternal/: CMakeLists.txt  PID_Controller.cpp  PID_Controller_data.cpp  PID_Controller_private.h  PID_Controller_types.h  codedescriptor.dmr  controller_codegenTest_data.cpp  ert_main.cpp  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h  simulink_cache.xml  tr
test/: CMakeLists.txt  controller_test.cpp
test/test_data/: PIDN_coefficients_testing.csv  PID_testing_X.csv  PID_testing_X_ts.csv  PID_testing_Y.csv  PID_testing_Y_ts.csv  PID_testing_Z.csv  PID_testing_Z_ts.csv  PID_testing_all.csv  PID_testing_all_ts.csv  PID_testing_none.csv  PID_testing_none_ts.csv  PID_testing_pitch.csv  PID_testing_pitch_ts.csv  PID_testing_roll.csv  PID_testing_roll_ts.csv  PID_testing_rpy.csv  PID_testing_rpy_ts.csv  PID_testing_xyz.csv  PID_testing_xyz_ts.csv  PID_testing_yaw.csv  PID_testing_yaw_ts.csv  README.md.txt
tmwinternal/: rtw_proj.tmw
